# RustNations2024

./: .gitignore
code/: Cargo.toml
code/async_cpu_heavy/: Cargo.toml
code/async_cpu_heavy/src/: main.rs
code/atomic/src/: main.rs
code/data_race/src/: main.rs
code/mixed_channels/: Cargo.toml
code/mixed_channels/src/: main.rs
code/mixed_channels2/: Cargo.toml
code/mixed_channels2/src/: main.rs
code/mutex/src/: main.rs
code/workshop_async/as_setup/: Cargo.toml
code/workshop_async/axum_setup/: .env  Cargo.toml  blog.db-shm  blog.db-wal
code/workshop_async/axum_setup/migrations/: 20240119193839_initial.sql
code/workshop_async/axum_setup/src/: main.rs
code/workshop_async/blog_client/: Cargo.toml
code/workshop_async/blog_client/src/: main.rs
code/workshop_async/db_setup/: .env  Cargo.toml
code/workshop_async/db_setup/migrations/: 20240119200213_data.sql
code/workshop_async/db_setup/src/: main.rs
code/workshop_thread/no_mutex/: Cargo.toml
code/workshop_thread/no_mutex/src/: main.rs
code/workshop_thread/perf_check/: Cargo.toml
code/workshop_thread/perf_check/src/: main.rs
code/workshop_thread/shuffle/: Cargo.toml
code/workshop_thread/shuffle/src/: main.rs
code/workshop_thread/simple_chunks/: Cargo.toml
code/workshop_thread/simple_chunks/src/: main.rs
code/workshop_thread/single_thread/: Cargo.toml
code/workshop_thread/single_thread/src/: main.rs
code/workshop_thread/use_all_cpus/: Cargo.toml
code/workshop_thread/use_all_cpus/src/: main.rs
code/workshop_thread/with_rayon/: Cargo.toml
code/workshop_thread/with_rayon/src/: main.rs
cpp/atomics/: CMakeLists.txt  atomics.cpp
cpp/data_race/: CMakeLists.txt  data_race.cpp
cpp/mutex/: CMakeLists.txt  mutex.cpp
manual/: book.toml
manual/src/: .threads-performance.md  SUMMARY.md  about_herbert.md  as  as-workshop-  as-workshop-bench.md  as-workshop-client1.md  as-workshop-client2.md  as-workshop-db1.md  as-workshop-db2.md  as-workshop-db3.md  as-workshop-db4.md  as-workshop-get-all.md  as-workshop-hello-web.md  as-workshop-intro.md  as-workshop-rest.md  as-workshop-setup.md  async-blocking.md  async-intro.md  async-model.md  async-threads.md  drop-intro.md  drop-quiz-move.md  drop-shared.md  drop-smart-ptr.md  drop-super.md  drop-transitive.md  fc-atomics.md  fc-cpp-explain.md  fc-cpp.md  fc-fear-the-crab.md  fc-go.md  fc-intro.md  fc-meaning.md  fc-meaning2.md  fc-mutex.md  (+17 more)
(+1 files in other folders)
