[package]
name = "axum_setup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
