[package]
name = "db_setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
